<resources>
    <string name="app_name">HoneyKomb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permission_granted">Permission is granted</string>
    <string name="request_external_storage_permision">HoneyKomb need read and write storage.</string>
    <string name="allow">Allow</string>
    <string name="need_permission">Need your permission to proceed further.</string>
    <string name="DROP_TABLE_IF_EXISTS">DROP TABLE IF EXISTS</string>
    <string name="exitdialog_info">Do you want to exit the application</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="reminder">Reminder</string>
    <string name="calendar">Calendar</string>
    <string name="show_event_list">Show event list</string>
    <string name="add">Add</string>
    <string name="notification">Notifications</string>
    <string name="invitation">Invitation</string>
    <string name="list">List</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="welcome">Welcome to HoneyKomb!</string>
    <string name="agree">Agree</string>
    <string name="termsconditions"><![CDATA[Terms &amp; Conditions]]></string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="common_net_error">Error processing Request…please check your internet connection
        and try again..
    </string>
    <string name="SENDER_ID">606430755411</string>
    <string name="try_again">Try Again</string>
    <string name="got_it">Got it!</string>
    <string name="events">Events</string>
    <string name="group">Groups</string>
    <string name="plus_image">Plus Image</string>
    <string name="minus_image">Minus Image</string>
    <string name="date">Date</string>
    <string name="pending_events">Pending Invitations</string>
    <string name="no_events_to_list">No events on selected date..!</string>
    <string name="event_title">Event title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="start_time">HH/MM</string>
    <string name="start_date_text">Start Date</string>
    <string name="time_text">Time</string>
    <string name="start_date">DD/MM/YYYY</string>
    <string name="end_date_text">End Date</string>
    <string name="invitees">Invitees</string>
    <string name="invitees_hint">0 Invitees selected</string>
    <string name="event_title_alert">Please enter event title.</string>
    <string name="gps_alert">GPS Network not enabled</string>
    <string name="open_location_settings">Open Location Setting</string>
    <string name="start_date_n_time_text">Start date and time</string>
    <string name="start_date_n_time_hint">DD/MM/YYYY HH/MM</string>
    <string name="end_date_n_time_text">End date and time</string>
    <string name="please_select_start_date_n_time">Please select start date and time.</string>
    <string name="contact_name">Contact Name</string>
    <string name="search_contact_hint">Search Contacts</string>
    <string name="allContacts">All Contacts</string>
    <string name="rsvp">RSVP:</string>
    <string name="read">Read:</string>
    <string name="invitees_selected">Invitees selected</string>
    <string name="add_event">Add event</string>
    <string name="am_going">I\'AM going</string>
    <string name="no">NO</string>
    <string name="delete_all">Delete All</string>
    <string name="back">Back</string>
    <string name="decline">Decline</string>
    <string name="going">GOING</string>
    <string name="five_mins">5 Min</string>
    <string name="ten_mins">10 Min</string>
    <string name="fifteen_mins">15 Min</string>
    <string name="thirty_mins">30 Min</string>
    <string name="one_hour">1 Hr</string>
    <string name="zero_one">01</string>
    <string name="edit_event">Edit event</string>
    <string name="canceled_event">Canceled event</string>
    <string name="groups">Favorite Groups</string>
    <string name="button_text_done">Done</string>

</resources>
