<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_invitation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/invitation" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_group"
            android:visible="false"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Favorite Groups" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/terms_of_use" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/privacy_policy" />
    </group>

</menu>
