<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialoglayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/task_cell_background">

    <LinearLayout
        android:id="@+id/headerlout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/projectdialogtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/actionbarbg"
            android:gravity="center"
            android:padding="6dp"
            android:text="Message"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/text_title" />

        <TextView
            android:id="@+id/projectdialog_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="15dip"
            android:layout_weight="0.01"
            android:gravity="center"
            android:padding="20dp"
            android:scrollbars="vertical"
            android:text="@string/exitdialog_info"
            android:textColor="@color/text_title"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="5dp"
            android:background="#E6E6E6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/headerlout"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/project_cancelbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="0.02dp"
            android:layout_height="41dp"
            android:background="#E6E6E6" />

        <Button
            android:id="@+id/project_okbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>